--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@faker-js/faker": "^8.1.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -24,19 +25,22 @@
     "@types/luxon": "^3.3.2",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "eslint": "^8.32.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard-with-typescript": "^32.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
+    "globals": "^15.6.0",
     "json-server": "^0.17.2",
     "nodemon": "^2.0.20",
     "prisma": "^4.15.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.15.7",
     "typescript": "^4.9.5",
+    "typescript-eslint": "^7.14.1",
     "vitest": "^0.34.4"
   },
   "dependencies": {
